[package]
name = "gst-plugin-perf"
version = "0.1.0"
authors = [
  "RidgeRun <http://www.ridgerun.com>, Steve McFarlin <steve@stevemcfarlin.com>",
]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "LGPL 2.1"
edition = "2018"
description = "A GStreamer element to measure framerate, bitrate and CPU usage"

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1.0"
anyhow = "1.0"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1", features = [
  "fs",
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-stream = "0.1.11"

[lib]
name = "gstrsperf"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
# gst-plugin-version-helper.workspace = true
